--- a/style/style.css
+++ b/style/style.css
@@ -29,5 +29,153 @@ body{
     font-size: 1rem;
     font-family: 'Poppins', sans-serif;
     background-color: var(--clr-neutral-vlight-grey);
+    }
+
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem 0 0 30rem;
+    width: 32%;
+}
+
+header h1, h2{
+    font-size: 1.8rem;
+    margin: 1rem auto;
+}
+
+header p{
+    font-size: 0.9rem;
+    align-self: center;
+    line-height: 2;
+    margin: 0 0 3rem 0;
+}
+
+.main-container{
+    box-shadow: 0.2rem var(--clr-neutral-vlight-grey);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-top: 0.3rem var(--clr-primary-red) solid;
+    box-shadow: 0.2rem 0.2rem 0.3rem 0.2rem rgb(232, 232, 232);
+    border-radius: 0.3rem;
+    margin: 0 auto;
+    padding: 1.8rem;
+    width: 18%;
+}
+
+.main-container h3{
+    margin: 0.5rem 0 0 -0.50rem;
     
+}
+
+.main-container p{
+    font-weight: 400;
+    font-size: 0.8rem;
+    opacity: 0.4;
+    margin: 0.5rem 0 0 -0.50rem;
+    line-height: 2;
+    
+}
+
+.main-container img{
+    width: 20%;
+    padding: 2rem 0 0 13rem;
+}
+
+
+.main-container-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-top: 0.3rem var(--clr-primary-cyan) solid;
+    box-shadow: 0.2rem 0.2rem 0.3rem 0.2rem rgb(232, 232, 232);
+    border-bottom: 0.3rem transparent;
+    border-radius: 0.3rem;
+    margin: -5.5rem 0 0 12rem;
+    padding: 1.8rem;
+    width: 18%;
+}
+
+.main-container-left img{
+    width: 20%;
+    padding: 2rem 0 0 13rem;
+}
+
+.main-container-left h3{
+    margin: 0.5rem 0 0 -0.50rem;
+}
+
+
+.main-container-left p{
+    font-weight: 400;
+    font-size: 0.8rem;
+    opacity: 0.4;
+    margin: 0.5rem 0 0 -0.50rem;
+    line-height: 2;
+
+}
+
+.main-container-right{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-top: 0.3rem var(--clr-primary-blue) solid;
+    box-shadow: 0.2rem 0.2rem 0.3rem 0.2rem rgb(232, 232, 232);
+    border-bottom: 0.3rem transparent;
+    border-radius: 0.3rem;
+    margin: -15.5rem 0 0 56rem;
+    padding: 1.8rem;
+    width: 18%;
+}
+
+.main-container-right img{
+    width: 20%;
+    padding: 2rem 0 0 13rem;
+}
+
+.main-container-right h3{
+    margin: 0.5rem 0 0 -0.50rem;
+}
+
+
+.main-container-right p{
+    font-weight: 400;
+    font-size: 0.8rem;
+    opacity: 0.4;
+    margin: 0.5rem 0 0 -0.50rem;
+    line-height: 2;
+
+}
+
+.main-container-bottom{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-top: 0.3rem var(--clr-primary-orange) solid;
+    padding: 0.5rem;
+    box-shadow: 0.2rem 0.2rem 0.3rem 0.2rem rgb(232, 232, 232);
+    border-radius: 0.3rem;
+    margin: -5rem 0 0 34.2rem;
+    padding: 1.8rem;
+    width: 18%;
+}
+
+.main-container-bottom img{
+    width: 20%;
+    padding: 2rem 0 0 13rem;
+}
+
+.main-container-bottom h3{
+    margin: 0.5rem 0 0 -0.50rem;
+}
+
+
+.main-container-bottom p{
+    font-weight: 400;
+    font-size: 0.8rem;
+    opacity: 0.4;
+    margin: 0.5rem 0 0 -0.50rem;
+    line-height: 2;
+
 }
