fixed html issues

--- a/style/style.css
+++ b/style/style.css
@@ -39,7 +39,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem 0 0 30rem;
+    margin: 2rem 0 -2rem 30rem;
     width: 32%;
 }
 
